--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FlaskBlog</title>
-</head>
-<body>
-<h1>Welcome to FlaskBlog</h1>
-</body>
-</html>
+{% extends "base.html" %} {% block title %}Blog - Home{% endblock %} {% block
+content %}
+<h1>Blog Posts</h1>
+<div class="list-group">
+  {% for post in posts %}
+  <a
+    href="{{ url_for('post', post_id=post['id']) }}"
+    class="list-group-item list-group-item-action"
+  >
+    <h5 class="mb-1">{{ post['title'] }}</h5>
+    <p class="mb-1">{{ post['content'] }}</p>
+  </a>
+  {% endfor %}
+</div>
+{% endblock %}
