--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,13 @@
       <a class="navbar-brand" href="{{ url_for('index') }}">Blog</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a
+              class="navbar-brand"
+              href="{{ url_for('posts') }}?role={{ role }}"
+              >Posts</a
+            >
+          </li>
           {% if 'username' in session %}
           <li class="nav-item">
             <span class="navbar-text">Welcome, {{ session['username'] }}!</span>
