--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,4 @@
 {% extends "base.html" %} {% block title %}Blog - Home{% endblock %} {% block
 content %}
-<h1>Blog Posts</h1>
-<div class="list-group">
-  {% for post in posts %}
-  <a
-    href="{{ url_for('post', post_id=post['id']) }}"
-    class="list-group-item list-group-item-action"
-  >
-    <h5 class="mb-1">{{ post['title'] }}</h5>
-    <p class="mb-1">{{ post['content'] }}</p>
-  </a>
-  {% endfor %}
-</div>
+<h1>Welcome to Blog Posts</h1>
 {% endblock %}
