add password recovery using a token

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,5 +23,6 @@
     />
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
+  <a href="{{ url_for('recover_password') }}" class="btn btn-link">¿Olvidaste tu contraseña?</a>
 </form>
 {% endblock %}
