--- a/templates/recover_password.html
+++ b/templates/recover_password.html
@@ -3,14 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Recover Password</title>
+    <link href="../static/css/recover_password.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<h2>Recover Password</h2>
-<form method="POST">
-    <label for="user">User:</label>
-    <input type="user" id="user" name="user" required>
-    <button type="submit">Send Recovery User</button>
-</form>
-<a href="{{ url_for('login') }}">Back to Login</a>
+
+<div class="modal modal-sheet d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog"
+     id="modalSignin">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-header p-5 pb-4 border-bottom-0">
+                <h1 class="fw-bold mb-0 fs-2">Recuperación de contraseña</h1>
+            </div>
+
+            <div class="modal-body p-5 pt-0">
+                <form class="" method="POST">
+                    <div class="form-floating mb-3">
+                        <input type="user" class="form-control rounded-3" id="user"
+                               name="user" required>
+                        <label for="user">Usuario</label>
+                    </div>
+                    <button class="w-100 mb-3 btn btn-lg rounded-3 btn-primary" type="submit">Enviar</button>
+                    <div class="position-relative" style="text-align: center">
+                        <a class="link-secondary" href="/">Volver al inicio</a>
+                    </div>
+                    <hr>
+                    <small class="text-body-secondary">Ingrese su usuario para recuperar su contraseña. Recibirá un correo electrónico.</small>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
