--- a/templates/login.html
+++ b/templates/login.html
@@ -21,20 +21,20 @@
             <a href="/">
                 <img class="mb-4" src="../static/img/logo.jpg" alt="" width="76" height="67">
             </a>
-            <h1 class="h3 mb-3 fw-normal">Please Login</h1>
+            <h1 class="h3 mb-3 fw-normal">Inicia sesión</h1>
         </div>
         <div class="form-floating">
             <input type="text" class="form-control" id="username" name="username" required>
-            <label for="username">Username</label>
+            <label for="username">Usuario</label>
         </div>
         <div class="form-floating">
             <input type="password" class="form-control" id="password" name="password" required>
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
         </div>
         <div class="form-check text-start my-3">
             <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
-                Remember me
+                Recuerdame
             </label>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
