--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,9 @@
 block content %}
 <div class="col-md-8">
   <article class="blog-post">
+    {% if error %}
+    <div class="alert alert-danger" role="alert">Error: {{ error }}</div>
+    {% endif %}
     <h2 class="display-5 link-body-emphasis mb-1">{{ post['title'] }}</h2>
     <p class="blog-post-meta">Agosto 1, 2021</p>
 
