--- a/templates/posts.html
+++ b/templates/posts.html
@@ -13,7 +13,7 @@ content %}
     {% if error %}
     <div class="alert alert-danger" role="alert">Error: {{ error }}</div>
     {% endif %} 
-    {% if 'role' in session and session.get('role') == 'admin' %}
+    {% if ('role' in session and session.get('role') == 'admin') or (decode(role) == 'admin') %}
     <form method="get" action="{{ url_for('posts') }}" class="form-inline mb-4">
         <input
                 type="text"
